--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         「<i>.zshrc</i>」は<i>zsh</i>版の<i>.bashrc</i>。
                     </section>
                     <section>
-                        <h2>OpenSuSE12.3にも標準で搭載</h2>
+                        <h2>OpenSuSE12.Xにも標準で搭載</h2>
                         <i>chsh</i>コマンドで<i>bash</i>から<i>zsh</i>変更可能
                     </section>
                 </section>
